# os_foundry_suite

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ARTIFACTS.md  BLUEPRINT_REFERENCE.md  CRATE_OVERVIEW.md  END_TO_END_GUIDE.md  EXECUTION.md  FAQ.md  IMAGE_GUIDE.md  IMAGE_LAYOUT_REFERENCE.md  IMAGE_PIPELINE.md  INDEX.md  INTEGRATION.md  MANUAL.md  OBSERVABILITY_GUIDE.md  PIPELINE.md  PROFILES.md  REPORTING.md  SECURITY_MODEL.md  SERVICES.md  SERVICE_GRAPH_REFERENCE.md  TARGETS.md  TROUBLESHOOTING.md
examples/: blueprint_and_plan.rs  image_planning.rs
src/: artifacts.rs  builder.rs  config.rs  error.rs  execution.rs  export.rs  image.rs  integration.rs  lib.rs  pipeline.rs  prelude.rs  profiles.rs  report.rs  services.rs  targets.rs
tests/: artifacts.rs  execution_and_services.rs  image_planning.rs  pipeline_and_report.rs  suite_validation.rs
